--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -6,7 +6,6 @@
   background-color: #253141;
   width: 300px;
   height: 100vh;
-  
 }
 
 .side-bar-header{
@@ -61,7 +60,7 @@
 }
 .messages{
   background-color: #fafafa;
-  height: calc(100vh - 100px -90px);
+  height: calc(100vh - 100px - 90px);
   padding: 46px 40px 0;
 }
 .form{
